# trabalho-POO

./: CMakeLists.txt  main.cpp
inc/: edificios.h  ilha.h  menus.h  trabalhadores.h  zonas.h
src/: CMakeLists.txt  README.md  cIlha.cpp  edificios.cpp  edificios.h  ilha.cpp  ilha.h  libs.h  main.cpp  menus.cpp  menus.h  trabalhadores.cpp  trabalhadores.h  utils.cpp  utils.h  zonas.cpp  zonas.h
